[package]
name = "vision"
version = "0.1.0"
authors = ["romain <romain.assie@supinfo.com>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"  # just for the example, not required in general

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]

