[package]
name = "vision"
version = "0.1.0"
authors = ["romain <romain.assie@supinfo.com>"]

[dependencies]
router= "0.5.1"
staticfile = "0.4"
maud = { version = "0.17", features = ["iron"] }
maud_macros = "0.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"  # just for the example, not required in general
mount = "0.3"
iron = "0.6.*"
